removed fixed width from card now that I figured out the spacing issue with the max inline size. Added a little bit of top and bottom margin to cards and brought the gap back to 2em

--- a/style.css
+++ b/style.css
@@ -180,8 +180,8 @@
       "card-2"
       "card-3"
       "card-4";
-    gap: 0.5em;
-    margin: 0;
+    gap: 2em;
+    margin: 1em 0;
   }
 
   .card {
@@ -195,7 +195,7 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
       rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
     transition: transform 0.3s ease;
-    width: 250px;
+    width: 100%;
   }
 
   .card h3,
